# Comet-HFJ-350M-Toy-Box

./: .SRCINFO  .gitignore  DISCLAIMER.md  LICENSE  PKGBUILD  PKGBUILD.local  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml  release.yml
src/toybox_calc/: main.py
src/toybox_calc/locale/en/LC_MESSAGES/: toybox_calc.po
src/toybox_calc/locale/ja/LC_MESSAGES/: toybox_calc.po
