[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toybox-calc"
version = "0.0.1"
description = "Comet HFJ-350M Toy Box - Konfigurations-Rechner"
authors = [
    {name = "DO3EET"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Ham Radio",
]

[project.urls]
"Homepage" = "https://github.com/frankenstein91/Comet-HFJ-350M-Toy-Box"
"Bug Tracker" = "https://github.com/frankenstein91/Comet-HFJ-350M-Toy-Box/issues"

[project.scripts]
toybox-calc = "toybox_calc.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toybox_calc = ["locale/**/*.mo", "locale/**/*.po"]
